--- a/appinfo.json
+++ b/appinfo.json
@@ -17,21 +17,7 @@
             {
                 "characterRegex": "[0-9:A-Za-z ]",
                 "file": "fonts/GlacialIndifference.ttf",
-                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_12",
-                "targetPlatforms": null,
-                "type": "font"
-            },
-            {
-                "characterRegex": "[0-9:A-Za-z ]",
-                "file": "fonts/GlacialIndifference.ttf",
-                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_18",
-                "targetPlatforms": null,
-                "type": "font"
-            },
-            {
-                "characterRegex": "[0-9:A-Za-z ]",
-                "file": "fonts/GlacialIndifference.ttf",
-                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_48",
+                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_24",
                 "targetPlatforms": null,
                 "type": "font"
             },
@@ -45,7 +31,21 @@
             {
                 "characterRegex": "[0-9:A-Za-z ]",
                 "file": "fonts/GlacialIndifference.ttf",
-                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_24",
+                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_48",
+                "targetPlatforms": null,
+                "type": "font"
+            },
+            {
+                "characterRegex": "[0-9:A-Za-z ]",
+                "file": "fonts/GlacialIndifference.ttf",
+                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_18",
+                "targetPlatforms": null,
+                "type": "font"
+            },
+            {
+                "characterRegex": "[0-9:%A-Za-z ]",
+                "file": "fonts/GlacialIndifference.ttf",
+                "name": "FONT_GLACIALINDIFFERENCE_REGULAR_12",
                 "targetPlatforms": null,
                 "type": "font"
             }
